ingress/nginx/nginx-http-ingress/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service 
  namespace: ingress-nginx
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
