ingress/nginx/nginx-http-ingress/ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-fanout-example
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nginx.banna.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
